tests/ui/type_checker/ok/set.aru
func foo(): (int, bool) {
    return 42, true
}

func main() {
    let mut x: int = 10
    x = 20
    
    let mut a: int = 0
    let mut b: bool = false
    a, b = foo()
}
